--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,12 @@ android {
         jvmTarget = '1.8'
     }
 
+
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
+
 
 }
 
